# eightysix

./: .gitignore  AUDIT.md
backend/: .dockerignore  .env.example  .env.prod.example  AUDIT.md  Dockerfile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  nginx.conf  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_users_and_indexes.py  003_seed_demo_user.py  004_forecast_tables.py  005_forecast_contract_v1.py
backend/app/: main.py
backend/app/core/: config.py  logging.py  (+2 more)
backend/audits/: AUDIT-2026-03-23.md  AUDIT-2026-03-24.md
backend/tests/: conftest.py
eightysix-demo/: Dockerfile  cli.py  pyproject.toml
eightysix-demo/analysis/: aggregator.py  annualizer.py  benchmarks.py  ghost_labor.py  menu_mix_leak.py  overstaffing.py  pipeline.py  refund_abuse.py  understaffing.py
eightysix-demo/app/: main.py
eightysix-demo/frontend/: index.html  package-lock.json  package.json  vite.config.ts
eightysix-demo/intake/: ambiguity_router.py  column_inference.py  confidence_scorer.py  date_range_detector.py  file_fingerprint.py  header_detector.py  report_classifier.py  type_coercion.py  workbook_splitter.py
eightysix-demo/llm/: explainer.py  summary_prompt.py
eightysix-demo/models/: canonical.py  results.py
eightysix-demo/normalize/: base.py  labor.py  menu_mix.py  punches.py  refunds.py  sales.py  schedule.py
eightysix-demo/output/: owner_report.py
eightysix-demo/parsers/: csv_parser.py  xlsx_parser.py
eightysix-demo/tests/: generate_test_data.py  test_analysis.py  test_intake.py
(+183 files in other folders)
